CompEditor: Attendees dialogs out of sync in Schedule and General tab
I start a new meeting and enter as Attendee an email address that is not in my address book. I go to the “Schedule“ tab and see the Attendee on the left. I click on ”Attendees…”, The attendee does not appear in the dialog. I close the “Attendees” dialog. The attendee disappears from the “Scheduling” and “General” tabs of the “Meeting” window.