I#933 - CompEditor: Attendees dialogs out of sync in Schedule and General tab

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/933